Gradle JVM arguments must be system properties